resetting counter added